Added the last graph for Q1

--- a/Report/report.tex
+++ b/Report/report.tex
@@ -132,12 +132,17 @@ La Figure~\ref{fig:degree_clustering} illustre la relation entre le degré d'un 
 
 \begin{figure}[H]
 \centering
-\begin{subfigure}[b]{0.48\textwidth}
+\begin{subfigure}[b]{0.32\textwidth}
     \includegraphics[width=\textwidth]{Caltech36_degree_vs_clustering.png}
     \caption{Caltech36}
 \end{subfigure}
 \hfill
-\begin{subfigure}[b]{0.48\textwidth}
+\begin{subfigure}[b]{0.32\textwidth}
+    \includegraphics[width=\textwidth]{JohnsHopkins55_degree_vs_clustering.png}
+    \caption{Johns Hopkins55}
+\end{subfigure}
+\hfill
+\begin{subfigure}[b]{0.32\textwidth}
     \includegraphics[width=\textwidth]{MIT8_degree_vs_clustering.png}
     \caption{MIT8}
 \end{subfigure}
