feat: Add repo link in the report

--- a/Report/report.tex
+++ b/Report/report.tex
@@ -65,6 +65,11 @@
 \tableofcontents
 \newpage
 
+\begin{center}
+\fbox{\parbox{0.9\textwidth}{\centering \textbf{Dépôt GitHub :} \url{https://github.com/miikeydev/graph-learning-facebook100}}}
+\end{center}
+\vspace{1cm}
+
 %======================================================================
 \section{Introduction}
 %======================================================================
