feat : fix mistakes in the report

--- a/Report/report.tex
+++ b/Report/report.tex
@@ -127,11 +127,11 @@ L'examen de la distribution des degrés révèle une structure hiérarchique pro
     \includegraphics[width=\textwidth]{MIT8_degree_distribution.png}
     \caption{MIT8}
 \end{subfigure}
-\caption{Distribution des degrés en échelle log-log}
+\caption{Distribution des degrés en échelle semi-logarithmique}
 \label{fig:degree_dist}
 \end{figure}
 
-La décroissance linéaire observée en échelle log-log est caractéristique des lois de puissance, signature des réseaux \textit{Scale-Free}. Cette propriété indique l'existence de \textit{hubs}, c'est-à-dire d'individus exceptionnellement connectés qui jouent un rôle structurant dans le réseau. Ces étudiants populaires constituent des points de passage obligés pour la circulation de l'information sociale.
+La décroissance linéaire observée en échelle semi-logarithmique est caractéristique des lois de puissance, signature des réseaux \textit{Scale-Free}. Cette propriété indique l'existence de \textit{hubs}, c'est-à-dire d'individus exceptionnellement connectés qui jouent un rôle structurant dans le réseau. Ces étudiants populaires constituent des points de passage obligés pour la circulation de l'information sociale.
 
 La Figure~\ref{fig:degree_clustering} illustre la relation entre le degré d'un n\oe ud et son coefficient de clustering local. On y observe une corrélation négative systématique : plus un individu possède de connexions, moins ses contacts sont interconnectés entre eux. Ce phénomène s'explique par le fait que les \textit{hubs} agrègent des contacts issus de cercles sociaux distincts qui n'ont pas vocation à interagir.
 
